# AI-Engineering

./: LICENSE  pyproject.toml
notebooks/prerequistes/: 01-llm-apis.ipynb
